// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select > should allow for the OptGroup to be used 1`] = `
<div
  aria-labelledby="select-label-_r_1q_"
  class="rmd-menu rmd-menu--elevated"
  id="combobox-popup-_r_1r_"
  role="listbox"
  style="position: fixed; transform-origin: 50% 0; left: 16px; top: 0px; min-width: 0;"
  tabindex="-1"
>
  <ul
    class="rmd-list"
    role="none"
  >
    <ul
      aria-labelledby="optgroup-_r_1u_"
      class="rmd-list rmd-menu-item-group"
      role="group"
    >
      <li
        class="rmd-list-subheader"
        id="optgroup-_r_1u_"
        role="presentation"
      >
        <span
          class="rmd-list-item__text"
        >
          A
        </span>
      </li>
      <li
        class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-menu-item--focused rmd-option rmd-option--icon"
        id="option-_r_1v_"
        role="option"
        tabindex="-1"
      >
        <span
          class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon rmd-icon rmd-icon--svg"
        />
        <span
          class="rmd-list-item__text"
        >
          Apple
        </span>
      </li>
      <li
        class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
        id="option-_r_21_"
        role="option"
        tabindex="-1"
      >
        <span
          class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon rmd-icon rmd-icon--svg"
        />
        <span
          class="rmd-list-item__text"
        >
          Apricot
        </span>
      </li>
      <li
        class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
        id="option-_r_23_"
        role="option"
        tabindex="-1"
      >
        <span
          class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon rmd-icon rmd-icon--svg"
        />
        <span
          class="rmd-list-item__text"
        >
          Avocado
        </span>
      </li>
    </ul>
    <ul
      aria-labelledby="optgroup-_r_25_"
      class="rmd-list rmd-menu-item-group"
      role="group"
    >
      <li
        class="rmd-list-subheader"
        id="optgroup-_r_25_"
        role="presentation"
      >
        <span
          class="rmd-list-item__text"
        >
          B
        </span>
      </li>
      <li
        class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
        id="option-_r_26_"
        role="option"
        tabindex="-1"
      >
        <span
          class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon rmd-icon rmd-icon--svg"
        />
        <span
          class="rmd-list-item__text"
        >
          Blueberry
        </span>
      </li>
    </ul>
    <ul
      aria-labelledby="optgroup-_r_28_"
      class="rmd-list rmd-menu-item-group"
      role="group"
    >
      <li
        class="rmd-list-subheader"
        id="optgroup-_r_28_"
        role="presentation"
      >
        <span
          class="rmd-list-item__text"
        >
          <span>
            C
          </span>
        </span>
      </li>
      <li
        class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
        id="option-_r_29_"
        role="option"
        tabindex="-1"
      >
        <span
          class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon rmd-icon rmd-icon--svg"
        />
        <span
          class="rmd-list-item__text"
        >
          Cranberry
        </span>
      </li>
      <li
        class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
        id="option-_r_2b_"
        role="option"
        tabindex="-1"
      >
        <span
          class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon rmd-icon rmd-icon--svg"
        />
        <span
          class="rmd-list-item__text"
        >
          Currant
        </span>
      </li>
    </ul>
  </ul>
</div>
`;

exports[`Select > should allow the selected icon to appear after the option instead of before 1`] = `
<li
  aria-selected="true"
  class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-menu-item--focused rmd-option rmd-option--icon rmd-option--selected"
  id="option-_r_31_"
  role="option"
  tabindex="-1"
>
  <span
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon"
  >
    check
  </span>
  <span
    class="rmd-list-item__text"
  >
    Option 1
  </span>
</li>
`;

exports[`Select > should allow the selected icon to appear after the option instead of before 2`] = `
<li
  aria-selected="true"
  class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-menu-item--focused rmd-option rmd-option--icon rmd-option--selected"
  id="option-_r_31_"
  role="option"
  tabindex="-1"
>
  <span
    class="rmd-list-item__text"
  >
    Option 1
  </span>
  <span
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons rmd-icon--after rmd-list-item__addon rmd-option__icon"
  >
    check
  </span>
</li>
`;

exports[`Select > should apply the correct styling, HTMLAttributes, and allow a ref 1`] = `
<div
  aria-activedescendant=""
  aria-controls="combobox-popup-_r_3_"
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-labelledby="select-label-_r_2_"
  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label rmd-text-field-container--outline-right rmd-select-container"
  id="select-_r_0_"
  role="combobox"
  tabindex="0"
>
  <div
    class="rmd-box rmd-box--gap rmd-selected-option rmd-text-field"
  />
  <input
    aria-hidden="true"
    class="rmd-select rmd-select--outline rmd-text-field"
    id="select-value-_r_1_"
    placeholder=" "
    tabindex="-1"
    type="text"
  />
  <span
    class="rmd-label rmd-label--floating"
    id="select-label-_r_2_"
  >
    Select
  </span>
  <span
    class="rmd-text-field-addon rmd-text-field-addon--after rmd-text-field-addon--presentational rmd-box rmd-box--gap rmd-box--wrap"
  >
    <span
      aria-hidden="true"
      class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate"
    >
      arrow_drop_down
    </span>
  </span>
</div>
`;

exports[`Select > should apply the correct styling, HTMLAttributes, and allow a ref 2`] = `
<div
  aria-activedescendant=""
  aria-controls="combobox-popup-_r_3_"
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-labelledby="select-label-_r_2_"
  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label rmd-text-field-container--outline-right rmd-select-container custom-class-name"
  id="select-_r_0_"
  role="combobox"
  style="color: white;"
  tabindex="0"
>
  <div
    class="rmd-box rmd-box--gap rmd-selected-option rmd-text-field"
  />
  <input
    aria-hidden="true"
    class="rmd-select rmd-select--outline rmd-text-field"
    id="select-value-_r_1_"
    placeholder=" "
    tabindex="-1"
    type="text"
  />
  <span
    class="rmd-label rmd-label--floating"
    id="select-label-_r_2_"
  >
    Select
  </span>
  <span
    class="rmd-text-field-addon rmd-text-field-addon--after rmd-text-field-addon--presentational rmd-box rmd-box--gap rmd-box--wrap"
  >
    <span
      aria-hidden="true"
      class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate"
    >
      arrow_drop_down
    </span>
  </span>
</div>
`;

exports[`Select > should automatically pull options from the children and update when selected 1`] = `
<div
  aria-labelledby="select-label-_r_8_"
  class="rmd-menu rmd-menu--elevated"
  id="combobox-popup-_r_9_"
  role="listbox"
  style="position: fixed; transform-origin: 50% 0; left: 16px; top: 0px; min-width: 0;"
  tabindex="-1"
>
  <ul
    class="rmd-list"
    role="none"
  >
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-menu-item--focused rmd-option rmd-option--icon"
      id="option-_r_c_"
      role="option"
      tabindex="-1"
    >
      <span
        class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon rmd-icon rmd-icon--svg"
      />
      <span
        class="rmd-list-item__text"
      >
        Option 1
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_e_"
      role="option"
      tabindex="-1"
    >
      <span
        class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon rmd-icon rmd-icon--svg"
      />
      <span
        class="rmd-list-item__text"
      >
        Option 2
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_g_"
      role="option"
      tabindex="-1"
    >
      <span
        class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon rmd-icon rmd-icon--svg"
      />
      <span
        class="rmd-list-item__text"
      >
        Option 3
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_i_"
      role="option"
      tabindex="-1"
    >
      <span
        class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon rmd-icon rmd-icon--svg"
      />
      <span
        class="rmd-list-item__text"
      >
        Option 4
      </span>
    </li>
  </ul>
</div>
`;

exports[`Select > should automatically pull options from the children and update when selected 2`] = `
<div
  aria-labelledby="select-label-_r_8_"
  class="rmd-menu rmd-menu--elevated"
  id="combobox-popup-_r_9_"
  role="listbox"
  style="position: fixed; transform-origin: 50% 0; left: 16px; top: 0px; min-width: 0;"
  tabindex="-1"
>
  <ul
    class="rmd-list"
    role="none"
  >
    <li
      aria-selected="true"
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-menu-item--focused rmd-option rmd-option--icon rmd-option--selected"
      id="option-_r_k_"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon"
      >
        check
      </span>
      <span
        class="rmd-list-item__text"
      >
        Option 1
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_m_"
      role="option"
      tabindex="-1"
    >
      <span
        class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon rmd-icon rmd-icon--svg"
      />
      <span
        class="rmd-list-item__text"
      >
        Option 2
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_o_"
      role="option"
      tabindex="-1"
    >
      <span
        class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon rmd-icon rmd-icon--svg"
      />
      <span
        class="rmd-list-item__text"
      >
        Option 3
      </span>
    </li>
    <li
      class="rmd-list-item rmd-list-item--normal rmd-interaction-surface rmd-menu-item rmd-option rmd-option--icon"
      id="option-_r_q_"
      role="option"
      tabindex="-1"
    >
      <span
        class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-option__icon rmd-icon rmd-icon--svg"
      />
      <span
        class="rmd-list-item__text"
      >
        Option 4
      </span>
    </li>
  </ul>
</div>
`;

exports[`Select > should include the leftAddon of the selected option unless disableOptionAddon is true 1`] = `
<div
  class="rmd-box rmd-box--gap rmd-selected-option rmd-text-field"
  data-testid="selected"
>
  <span
    aria-hidden="true"
    class="rmd-avatar rmd-avatar--icon"
    data-testid="avatar"
  >
    A
  </span>
  <span
    class="rmd-nowrap rmd-ellipsis"
  >
    Avatar
  </span>
</div>
`;

exports[`Select > should include the leftAddon of the selected option unless disableOptionAddon is true 2`] = `
<div
  class="rmd-box rmd-box--gap rmd-selected-option rmd-text-field"
  data-testid="selected"
>
  <span
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons"
    data-testid="icon"
  >
    favorite
  </span>
  <span
    class="rmd-nowrap rmd-ellipsis"
  >
    Icon
  </span>
</div>
`;
